--- a/src/style.css
+++ b/src/style.css
@@ -121,6 +121,7 @@
   position: absolute;
   margin-top: 10px;
   left: 2%;
+  
   width: 48%;
   height: 180px;
   transition: 0.5s;
@@ -240,6 +241,9 @@
 }
 .playlist .song:last-of-type {
   margin-bottom: 10px;
+}
+.dark .playlist button {
+  color: #E6E6E6;
 }
 .playing-dur {
   position: absolute;
@@ -436,44 +440,6 @@ button:hover {
   border-radius: 15px;
 }
 
-/* About.vue */
-.songs {
-  width: 94%;
-  margin: 0 auto;
-  margin-top: -40px;
-}
-.song2 {
-  width: 20%;
-  font-size: 18px;
-  margin-top: 70px;
-}
-.songs button:hover {
-  opacity: 1;
-}
-.song-title2 {
-  position: relative;
-  top: 4px;
-  left: 0;
-  text-align: center;
-  font-size: 15px;
-}
-.dark .song-title2 {
-  color: #E6E6E6;
-}
-.song-image {
-  width: 75%;
-  margin: 0 auto;
-  height: 168px;
-  border-radius: 16px;
-}
-.song-image img {
-  border-radius: 16px;
-  transition: 0.2s;
-}
-.song-image img:hover {
-  transform: scale(1.03);
-  box-shadow: 0px 6px 30px 1px rgb(76 70 124 / 60%);
-}
 
 @media screen and (max-width: 1280px) {
   .listen {
@@ -621,25 +587,8 @@ button:hover {
   .playing-dur {
     font-size: 14px;
   }
-
-  /* About.vue */
-  .songs {
-    margin-top: 5px;
-  }
-  .song2 {
-    width: 50%;
-    margin-bottom: 270px;
-  }
-  .song-title2 {
-    top: 13px;
-    font-size: 20px;
-  }
-  .song-image {
-    width: 73%
-  }
-  .song-image img:active {
-    transform: scale(1.03);
-    box-shadow: 0px 6px 30px 1px rgb(76 70 124 / 60%);
+  .playlist .song:last-of-type {
+    margin-bottom: 100px;
   }
 }
 @media screen and (max-width: 780px) {
@@ -688,9 +637,6 @@ button:hover {
   }
   .eye {
     display: none;
-    right: 150px;
-    top: 59px;
-    font-size: 21px;
   }
   .playlist, .change_color.playlist {
     top: -2px;
@@ -700,6 +646,9 @@ button:hover {
   .playlist .song {
     font-size: 18px;
     margin-bottom: 7px;
+  }
+  .playlist .song:last-of-type {
+    margin-bottom: 10px;
   }
   .playing-dur {
     font-size: 16px;
@@ -723,8 +672,9 @@ button:hover {
     position: relative;
     display: block;
     width: 70%;
-    height: 380px;
+    height: 50%;
     left: 15%;
+    top: 20px;
   }
   .player-cover__item {
     width: 100%;
@@ -787,21 +737,5 @@ button:hover {
   }
   .dark .control_stuff .next, .dark .control_stuff .prev {
     color: #E6E6E6;
-  }
-
-  /* About.vue */
-  .songs {
-    width: 88%;
-  }
-  .song2 {
-    width: 100%;
-    margin-bottom: 385px;
-  }
-  .song-title2 {
-    top: 15px;
-    font-size: 22px;
-  }
-  .song-image {
-    width: 60%;
   }
 }
